Use GatsbySeo and remark-typescript

--- a/src/content/basics/schema.mdx
+++ b/src/content/basics/schema.mdx
@@ -15,4 +15,12 @@ type Query {
 - a
 - list
 
+<MultiCodeBlock>
+
+```ts
+const foo: number = 123;
+```
+
+</MultiCodeBlock>
+
 [getting started](/getting-started)
