Wire up multicodeblock

--- a/src/content/basics/schema.mdx
+++ b/src/content/basics/schema.mdx
@@ -23,4 +23,12 @@ const foo: number = 123;
 
 </MultiCodeBlock>
 
+<MultiCodeBlock>
+
+```ts
+const foo: number = 123;
+```
+
+</MultiCodeBlock>
+
 [getting started](/getting-started)
