Remove unused files

--- a/src/content/studio/getting-started.mdx
+++ b/src/content/studio/getting-started.mdx
@@ -31,7 +31,7 @@ In Studio, each **graph** has an associated GraphQL schema. Your first graph wil
    The list of organizations you belong to appears in the left column:
 
    <img
-     src="./img//organization-list.png"
+     src="./img/organization-list.png"
      class="screenshot"
      alt="Schema history tab in Studio"
    />
