Adjust spacing between nested elements in pages

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -76,9 +76,9 @@ Apollo is a platform for building a unified graph, a communication layer that he
     cta={CTA_LEARN}
   />
   <Docset
-    title="iOS"
+    title="Rover"
     description="Manage your Studio graphs and schemas from the command line."
-    path="/iOS"
+    path="/rover"
     cta={CTA_LEARN}
   />
 </DocsetGrid>
