--- a/src/content/studio/check-configurations.mdx
+++ b/src/content/studio/check-configurations.mdx
@@ -14,7 +14,7 @@ After you [enable schema checks](./schema-checks/) for your graph, you can custo
 In [Apollo Studio](https://studio.apollographql.com), you can configure default rules that are applied to every executed schema check. You define these rules from the Configuration tab of your graph's Checks page:
 
 <img
-  class="screenshot"
+  className="screenshot"
   src="./img/check-configurations/check-configuration-page.png"
   alt="Check configuration page in Apollo Studio"
 />
@@ -25,7 +25,7 @@ In [Apollo Studio](https://studio.apollographql.com), you can configure default 
 - **Operation count threshold**: _Exclude_ all operations that were executed fewer than this number of times within the specified **time range**.
 - **Variants**: _Include_ all distinct operations that were executed against each selected variant of your graph. The default value is "Base variant" (i.e., whichever variant schema checks are being run against).
 - **Client exclusions**: _Exclude_ all operations that were executed by particular clients, such as clients used exclusively for development and testing.
-  {' '}
+
   <img
     class="screenshot"
     src="./img/check-configurations/excluded-clients.png"
@@ -103,7 +103,7 @@ The graph ref `docs-example-graph@staging` specifies the `staging` variant of th
 To check your schema against multiple variants, call `rover graph check` once for each variant. Doing so results in status checks similar to the following:
 
 <img
-  class="screenshot"
+  className="screenshot"
   src="./img/schema-checks/multi-github-check.png"
   alt="Multiple service checks"
 />
