--- a/src/content/studio/explorer/sandbox.mdx
+++ b/src/content/studio/explorer/sandbox.mdx
@@ -3,15 +3,14 @@ title: Apollo Sandbox
 description: Use the Explorer with any GraphQL server
 ---
 
-import {Link} from '@chakra-ui/react';
-
 **Apollo Sandbox** is a special instance of the [Explorer](./explorer/) that doesn't require an Apollo account. Sandbox doesn't support certain Explorer features like schema history, but it's great for local development.
 
 <Button
   size="lg"
   colorScheme="indigo"
-  as={Link}
-  isExternal
+  as="a"
+  target="_blank"
+  rel="noopener noreferrer"
   to="https://studio.apollographql.com/sandbox/"
 >
   Launch Sandbox
@@ -20,7 +19,7 @@ import {Link} from '@chakra-ui/react';
 Sandbox automatically attempts to connect to a GraphQL server running at `http://localhost:4000`. You can use the box at the top of Sandbox to change this URL to any local or remote GraphQL endpoint that's accessible by your browser:
 
 <img
-  class="screenshot"
+  className="screenshot"
   src="../img/sandbox-url.jpg"
   alt="Sandbox URL field"
   width="300"
@@ -37,7 +36,7 @@ If you're signed in to Sandbox with your Apollo account, you can publish your Gr
 To do so, first click **Publish** at the top of Sandbox:
 
 <img
-  class="screenshot"
+  className="screenshot"
   src="../img/sandbox-publish.jpg"
   alt="Publishing schemas to Studio from Sandbox"
   width="600"
@@ -64,7 +63,7 @@ Apollo Sandbox provides schema diffs and checks to help you validate changes to 
 From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Schema Diff** page from the left navigation panel. Then use the dropdown menus to select any accessible organization, graph, and variant to compare against:
 
 <img
-  class="screenshot"
+  className="screenshot"
   src="../img/sandbox-diff.jpg"
   alt="Schema diff in Sandbox"
 />
@@ -80,7 +79,7 @@ In addition to viewing the diff on this page, you can click **Run a Check** in t
 From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Checks** page from the left navigation panel:
 
 <img
-  class="screenshot"
+  className="screenshot"
   src="../img/sandbox-checks-select.jpg"
   alt="Sandbox select variant for checks"
   width="400"
@@ -89,7 +88,7 @@ From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Checks** p
 Select any accessible organization, graph, and variant to check against and click **Run a check**. When the check completes, Sandbox displays a result summary:
 
 <img
-  class="screenshot"
+  className="screenshot"
   src="../img/sandbox-checks-result.jpg"
   alt="Sandbox checks result"
   width="400"
