--- a/src/content/studio/sub-processors.mdx
+++ b/src/content/studio/sub-processors.mdx
@@ -2,8 +2,6 @@
 title: Sub-processors
 ---
 
-import {Link} from '@chakra-ui/react';
-
 Apollo Graph, Inc. ("**Apollo**") may use third-party data processors ("**Sub-processors**") to process Customer Personal Data as defined in the Apollo Customer Data Processing Addendum, or other personal data which you as customer are permitted to submit to Apollo for processing per our mutual written agreement ("**Customer Personal Data**"). Capitalized terms not defined on this page have the meanings given to them in the written agreement between you and Apollo (the "**Agreement**").
 
 By subscribing to receive updates about this page, you will be notified by email about changes to Apollo’s Sub-processors that may be involved in processing your Customer Personal Data.
@@ -33,8 +31,9 @@ Current Apollo customers must subscribe to receive email notification of updates
 <Button
   size="lg"
   colorScheme="indigo"
-  as={Link}
-  isExternal
+  as="a"
+  target="_blank"
+  rel="noopener noreferrer"
   href="http://eepurl.com/hsDQCr"
 >
   Subscribe
